Fixed issue with image not fitting

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,59 @@
 .read-the-docs {
   color: #888;
 }
+
+.pokeball {
+  height: 40px;
+}
+
+#header-right {
+  background-color: rgb(251, 255, 251);
+  border-radius: 10px;
+  border: 5px solid yellow;
+  width: 50%;
+  margin-left: 25%;
+  font-weight: bold;
+}
+
+.card {
+  position: relative;
+  width: 25%;
+  margin-top: 20px;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+}
+
+.card-background {
+  background-image: url('./assets/images/Pokedex.png');
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+}
+
+.pokemon-image {
+  position: relative;
+  z-index: 1;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
+
+.card p {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  margin: 10px 0;
+}
+
+#card-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
